  * setup.py: Remove version attribute, we do not update and use it anyway.
  * Add ./test-hooks: Test suite for the various package hooks shipped with
    apport. Test the package problem hook for now.
  * Add bin/kernel_hook and ship it in /usr/share/apport. The kernel can call
    this on an Oops. Add a test suite for it to test-hooks.
  * apport/ui.py: Do not crash if Package: specifies a nonexisting package.
    Display a proper error message instead. Add test_run_crash_errors() test
    case.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu,  1 Feb 2007 11:45:11 +0100

apport (0.47) feisty; urgency=low

  * apport/report.py, add_hooks_info(): Only use first part of 'Package:',
    there might be a version number and a changed files list which we must not
    propagate to the import statement. Closes: LP#82566

 -- Kees Cook <kees@ubuntu.com>  Wed, 31 Jan 2007 15:37:11 -0800

apport (0.46) feisty; urgency=low

  * debian/control: Bump dependencies to python-apport due to recent changes
    in expected return values in some UI functions. Closes: LP#82267
  * bin/package_hook: Remove erroneous 'import apport.packaging', which
    shadows the packaging variable in the apport package. This unbreaks the
    package problem hook. Closes: LP#82297

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 31 Jan 2007 07:51:24 +0100

apport (0.45) feisty; urgency=low

  New feature: Infrastructure for package install/upgrade failures:

  * Add bin/package_hook: Script for creating a report for a package
    installation/upgrade failure. It receives a package name, a number of log
    files, and an ErrorMessage: from stdin. This will be called from e.g.
    dist-upgrader.
  * setup.py, debian/apport.install: Ship package_hook.
  * apport/ui.py: If ProblemType is 'Package', call a new function
    self.ui_present_package_error() instead of presenting a crash. Add test
    suite checks for the package error report workflow.